<resources>
    <string name="app_name">ViewModelFull</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter">Enter</string>
     <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="first">First</string>
    <string name="last">last</string>
</resources>